# summit_csl

./: README.md
summit_csl/: CMakeLists.txt  package.xml
summit_xl_control/config/: summit_xl_diffdrive_control_sim.yaml
summit_xl_control/launch/: summit_xl_control.launch
summit_xl_description/robots/: summit_xl_csl.urdf.xacro
summit_xl_description/urdf/bases/: summit_xl_base.gazebo.xacro
summit_xl_description/urdf/wheels/: rubber_wheel.urdf.xacro
summit_xl_gazebo/launch/: summit_xl_csl.launch  summit_xl_csl_spawn.launch
summit_xl_gazebo/rviz/: ntua.rviz
summit_xl_localization/launch/: amcl.launch  map_server.launch
summit_xl_localization/scripts/: pwc2pose.py
summit_xl_navigation/config/: costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_steel_params.yaml
summit_xl_navigation/config/csl/: costmap_common_params.yaml  costmap_common_params_local.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_omni_params.yaml
summit_xl_navigation/launch/: move_base.launch
summit_xl_pad/scripts/: teleop_keyboard.py
summit_xl_pad/src/: summit_xl_pad_csl.cpp
